--- a/compito-d2/assets/css/style.css
+++ b/compito-d2/assets/css/style.css
@@ -25,7 +25,9 @@ hr {
   padding: 0.2rem 0.7rem;
   background-color: rgba(255, 255, 255, 0.398);
   cursor: pointer;
-  backdrop-filter: blur(10px)
+  backdrop-filter: blur(10px);
+  margin-block: 1rem;
+  box-shadow: 2px 2px 2px 2px rgb(168, 168, 168);
 }
 
 .container-icon {
@@ -33,7 +35,7 @@ hr {
   right: -10px;
   bottom: 0;
   z-index: 2;
-
+  margin-inline: 1rem;
 }
 
 #social {}
