--- a/compito-d3/assets/css/style.css
+++ b/compito-d3/assets/css/style.css
@@ -144,9 +144,11 @@ main .btn {
     }
 
     .card {
-        width: 40%;
+        width: 44%;
         display: inline-block;
-
+        margin-block: unset;
+        margin-inline: unset;
+        vertical-align: middle;
     }
 
 
@@ -164,12 +166,14 @@ main h2 {
     color: brown;
     font-weight: bold;
 
+
 }
 
 @media screen and (min-width:575px) {
     main h2 {
         margin-inline: 1rem;
         text-align: unset;
+        font-size: 2rem;
     }
 }
 
