--- a/compito-d3/assets/css/style.css
+++ b/compito-d3/assets/css/style.css
@@ -80,7 +80,40 @@ header img {
 }
 
 @media screen and (min-width:767px) {
-    #nav {}
+
+    body {
+        display: flex;
+    }
+
+    header {
+        background-color: rgb(255, 254, 243);
+    }
+
+    #nav {
+        display: flex;
+        flex-direction: column;
+        margin-block: 2rem;
+        background-size: cover;
+        background-color: unset;
+    }
+
+    #first-link {
+        padding: 1.5rem 1.5rem;
+        order: -1;
+
+    }
+
+    .nav-link {
+        margin-block: 0.5rem;
+        padding: unset;
+        padding: 2rem 2rem;
+        margin-inline: 2rem;
+    }
+
+    header img {
+        margin-right: 1rem;
+    }
+
 }
 
 
@@ -150,6 +183,7 @@ main .btn {
 
 /* cards */
 @media screen and (min-width:575px) {
+
     main h1 {
         width: unset;
         text-align: unset;
@@ -168,7 +202,6 @@ main .btn {
 }
 
 @media screen and (min-width:767px) {
-    .card {}
 
     .cards {
         display: flex;
