--- a/compito-d4/start1/postit.css
+++ b/compito-d4/start1/postit.css
@@ -1,5 +1,5 @@
 body {
-    margin: 20px auto;
+    margin: 30px auto;
     font-family: 'Lato';
     background: #666;
     color: #fff;
@@ -8,6 +8,7 @@ body {
 * {
     margin: 0;
     padding: 0;
+
 }
 
 h2 {
@@ -28,6 +29,7 @@ ul,
 li {
     list-style: none;
     margin: 1em;
+
 }
 
 ul {
@@ -39,12 +41,14 @@ ul {
 ul li a {
     text-decoration: none;
     color: #000;
-    background: #ffc;
+    background: rgb(255, 255, 204);
+    background: rgb(213, 213, 191);
+    background: linear-gradient(0deg, rgba(213, 213, 191, 0.8995973389355743) 5%, rgba(225, 225, 187, 1) 15%, rgba(255, 255, 204, 1) 19%);
     display: block;
     height: 10em;
     width: 10em;
     padding: 1em;
-    box-shadow: 5px 5px 7px rgba(33, 33, 33, .7);
+    box-shadow: 4px 4px 6px rgba(46, 46, 46, 0.7);
     transform: rotate(-6deg);
     transition: transform .15s linear;
 
@@ -54,14 +58,18 @@ ul li:nth-child(even) a {
     transform: rotate(4deg);
     position: relative;
     top: 5px;
-    background: #cfc;
+    background: rgb(205, 229, 205);
+    background: rgb(205, 229, 205);
+    background: rgb(182, 208, 182);
+    background: linear-gradient(0deg, rgba(182, 208, 182, 1) 5%, rgba(175, 218, 175, 1) 15%, rgba(204, 255, 204, 1) 19%);
 }
 
 ul li:nth-child(3n) a {
     transform: rotate(-6deg);
     position: relative;
     top: -5px;
-    background: #ccf;
+    background: rgb(180, 180, 222);
+    background: linear-gradient(0deg, rgba(180, 180, 222, 1) 5%, rgba(195, 195, 220, 1) 15%, rgba(204, 204, 255, 1) 19%);
 }
 
 ul li:nth-child(5n) a {
@@ -72,7 +80,7 @@ ul li:nth-child(5n) a {
 
 ul li a:hover,
 ul li a:focus {
-    box-shadow: 10px 10px 7px rgba(0, 0, 0, .7);
+    box-shadow: 5px 7px 6px rgba(0, 0, 0, .7);
     transform: scale(1.3);
     position: relative;
     z-index: 5;
