--- a/compito-d4/start2/frase.css
+++ b/compito-d4/start2/frase.css
@@ -66,14 +66,30 @@
 }
 
 .parole i:nth-child(2) {
-    animation: fadeInOut 2s 2.2s ease-in-out;
+    animation: fadeInOut 3s 1s ease-in-out;
 }
 
 @keyframes fadeInOut {
     0% {
         color: rgb(250, 250, 27);
-        opacity: 1;
+        opacity: 0;
         transform: translateY(-600%);
+    }
+
+    25% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    75% {
+        opacity: 1;
+    }
+
+    90% {
+        opacity: 1;
     }
 
     100% {
@@ -86,16 +102,35 @@
 }
 
 .parole i:nth-child(3) {
-    animation: fadeSlide 2s 3.8s ease-in-out;
+    animation: fadeSlide 4s 1.8s ease-in-out;
 }
 
 @keyframes fadeSlide {
     0% {
         color: rgb(0, 255, 251);
-        opacity: 1;
+        opacity: 0;
         transform: translateX(-400%);
     }
 
+    25% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    75% {
+        opacity: 0;
+    }
+
+    85% {
+        opacity: 1;
+    }
+
+    90% {
+        opacity: 1;
+    }
 
     100% {
 
